gcc/testsuite/gm2/iso/fail/badparam3.mod
IMPLEMENTATION MODULE badparam3 ;

PROCEDURE foo (VAR c: CARDINAL) ;
BEGIN
END foo ;

END badparam3.
